--- a/molecule/suse-15/playbook.yml
+++ b/molecule/suse-15/playbook.yml
@@ -33,7 +33,7 @@
     - role: kubernetes-flannel
 
   post_tasks:
-    - name: kubectl version
-      command: kubectl version
+    - name: /usr/local/bin/kubectl version
+      command: /usr/local/bin/kubectl version
       register: result
       changed_when: result is not succeeded
