--- a/molecule/ubuntu-18.04-vagrant/playbook.yml
+++ b/molecule/ubuntu-18.04-vagrant/playbook.yml
@@ -34,7 +34,7 @@
     - role: kubernetes-weave
 
   post_tasks:
-    - name: kubectl version
-      command: kubectl version
+    - name: /usr/local/bin/kubectl version
+      command: /usr/local/bin/kubectl version
       register: result
       changed_when: result is not succeeded
