--- a/.travis.lxd.yml
+++ b/.travis.lxd.yml
@@ -21,6 +21,7 @@ profiles:
       boot.autostart: "false"
       security.nesting: "true"
       security.privileged: "true"
+      limits.memory.swap: "false"
       linux.kernel_modules: ip_tables,ip6_tables,netlink_diag,nf_nat,overlay
       raw.lxc: |
         lxc.apparmor.profile = unconfined
