--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@
 kubernetes_version: "v1.17.0"
 
 # minikube version.
-minikube_version: "v1.6.0-beta.1"
+minikube_version: "v1.6.0"
 
 # minikube download details.
 minikube_download: "{{ _minikube_download[minikube_version] }}"
