--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,10 +15,10 @@
 # limitations under the License.
 
 _minikube_download:
-  v1.6.0-beta.1:
-    url: "https://storage.googleapis.com/minikube/releases/v1.6.0-beta.1/minikube-linux-amd64"
-    dest: "/var/cache/ansible/minikube-linux-amd64-v1.6.0-beta.1"
-    checksum: "sha1:a48f8126310e4c85240b3be2414ce74db5e08159"
+  v1.6.0:
+    url: "https://storage.googleapis.com/minikube/releases/v1.6.0/minikube-linux-amd64"
+    dest: "/var/cache/ansible/minikube-linux-amd64-v1.6.0"
+    checksum: "sha1:7f5f143e7ce4c44f3109e4d574db667dacfd4aa0"
   v1.5.2:
     url: "https://storage.googleapis.com/minikube/releases/v1.5.2/minikube-linux-amd64"
     dest: "/var/cache/ansible/minikube-linux-amd64-v1.5.2"
