--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -23,6 +23,7 @@
     - role: docker
     - role: kubernetes-cni
     - role: kubectl
+      kubectl_version: "{{ kubernetes_version }}"
 
 - hosts: kube-master
   remote_user: root
