--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -80,7 +80,10 @@
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    TMP_DIR="`mktemp -d`" && cp {{ minikube_download.dest }} $TMP_DIR/minikube && mv $TMP_DIR/minikube . && rm -rf $TMP_DIR
+    TMP_DIR="`mktemp -d`" \
+      && cp {{ minikube_download.dest }} $TMP_DIR/minikube \
+      && mv $TMP_DIR/minikube . \
+      && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
   when: get_url_result is changed
