--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _minikube_download:
+  v1.7.3:
+    url: "https://storage.googleapis.com/minikube/releases/v1.7.3/minikube-linux-amd64"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/minikube-linux-amd64-v1.7.3"
+    checksum: "sha1:0af85ec59576c9bd55237eec83af5e830a096184"
   v1.7.2:
     url: "https://storage.googleapis.com/minikube/releases/v1.7.2/minikube-linux-amd64"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/minikube-linux-amd64-v1.7.2"
