--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,7 +82,7 @@
   shell: |
     set -o pipefail
     cd /usr/local/bin
-    TMP_DIR="`mktemp -d`" \
+    TMP_DIR="$(mktemp -d)" \
       && cp {{ minikube_download.dest }} $TMP_DIR/minikube \
       && chown root:root $TMP_DIR/minikube \
       && chmod 0755 $TMP_DIR/minikube \
