--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,7 +42,7 @@ kubelet_kubelet_cgroups: "/systemd/system.slice"
 kubelet_container_runtime: "docker"
 
 # The endpoint of remote runtime service.
-kubelet_container_runtime_endpoint: "/var/run/dockershim.sock"
+kubelet_container_runtime_endpoint: "unix:///var/run/dockershim.sock"
 
 # ResolverConfig is the resolver configuration file used as the basis
 # for the container DNS resolution configuration.
