--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _minikube_download:
+  v1.9.1:
+    url: "https://github.com/kubernetes/minikube/releases/download/v1.9.1/minikube-linux-amd64"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/minikube-linux-amd64-v1.9.1"
+    checksum: "sha1:dea55d11176e1c4b0b6a799c57e16e7da0800d41"
   v1.9.0:
     url: "https://github.com/kubernetes/minikube/releases/download/v1.9.0/minikube-linux-amd64"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/minikube-linux-amd64-v1.9.0"
